src/bool_bench.h

#pragma once

#include <stdint.h>
#include <stddef.h>
#ifndef __cplusplus
#include <stdbool.h>
#endif

#ifdef __cplusplus
extern "C" {
#endif

/*******************************************************************************
 * There are 3 types of boolean functions served by this library.
 * 1: Backed by binary tree: `bb_tree_*`
 *    Tree is generated by Rémy-like algorith for tree size of up to 2^16.
 *    Bitness can vary from 10 to 256.
 *    `depth` and `nodes` computed from supporting tree.
 *
 * 2: Backed by random table. `bb_table_*`
 *    Bitness can vary from 4 to 256.
 *    For bitness in [4, 6] represented as uint64_t.
 *    For bitness in [7, 16] represented as std::vector<bool>.
 *    For higher bitness computed when queried + memoized.
 *    `depth` and `nodes` computed for bitness in [4, 16].
 *
 * 3: Backed by circuits from benchmarks.
 ******************************************************************************/

/********************************* 1st type ***********************************/

// Minimum bitness for which trees are constructed.
uint16_t bb_min_tree_bitness();

size_t bb_tree_cases_number(uint16_t bitness);

// Input: 0/1 string of length bitness
// Output: 0/1 string of length 2 * bitness + 1
// Output consists of the input [bitness bits] followed by f(input) [1 bit]
// followed by f(input with flipped i-th bit) [1 bit x bitness]
const char* bb_tree_value(uint16_t bitness, size_t case_id, const char* input);

// Input: case_ids array of length cases.
// Input: packed_inputs is not null-terminated and has length cases x reps x bitness.
// Output: out has shape cases x reps x (2 * bitness + 1), stored row-major.
void bb_tree_value_tensor(
    uint16_t bitness,
    const size_t* case_ids,
    size_t cases,
    const char* packed_inputs,
    size_t reps,
    float* out);

// Number of nodes or depth for given case
size_t bb_tree_nodes(uint16_t bitness, size_t case_id);
size_t bb_tree_depth(uint16_t bitness, size_t case_id);

// Input: 0/1 string of length (2 * bitness) x reps x (bitness - 1)
// Output: 0/1 string of length (2 * bitness) x reps x (2 * bitness - 1)
// We fix value of each bit to 0 and 1 and treat reps inputs for bb_tree_value
// function, then concatenate all outputs.
const char* bb_tree_restrictions(uint16_t bitness, size_t case_id, const char* input);

/********************************* 2nd type ***********************************/

// Maximum bitness for which table is representable as decision tree.
uint16_t bb_table_solvable_bitness();

size_t bb_table_cases_number(uint16_t bitness);

// Input: 0/1 string of length bitness
// Output: 0/1 string of length 2 * bitness + 1
// Output consists of the input [bitness bits] followed by f(input) [1 bit]
// followed by f(input with flipped i-th bit) [1 bit x bitness]
const char* bb_table_value(uint16_t bitness, size_t case_id, const char* input);

// Input: case_ids array of length cases.
// Input: packed_inputs is not null-terminated and has length cases x reps x bitness.
// Output: out has shape cases x reps x (2 * bitness + 1), stored row-major.
void bb_table_value_tensor(
    uint16_t bitness,
    const size_t* case_ids,
    size_t cases,
    const char* packed_inputs,
    size_t reps,
    float* out);

// Input: 0/1 string of length (2 * bitness) x reps x (bitness - 1)
// Output: 0/1 string of length (2 * bitness) x reps x (2 * bitness - 1)
// We fix value of each bit to 0 and 1 and treat reps inputs for bb_table_value
// function, then concatenate all outputs.
const char* bb_table_restrictions(uint16_t bitness, size_t case_id, const char* input);

// Number of nodes or depth for given case
size_t bb_table_nodes(uint16_t bitness, size_t case_id);
size_t bb_table_depth(uint16_t bitness, size_t case_id);

/********************************* 3rd type ***********************************/

// Returns sorted newline-separated circuit set names discovered in circuits/
const char* bb_circuit_sets();

// Returns sorted newline-separated circuit case names for a set
const char* bb_circuit_cases(const char* set_name);

size_t bb_circuit_inputs(const char* set_name, const char* case_name);
size_t bb_circuit_outputs(const char* set_name, const char* case_name);

// Computes value samples for an AIG circuit.
// For sequential circuits, input_state contains primary inputs followed by latch state bits.
// Return length is N + M * (N + 1), where N = inputs and M = outputs:
// input_state + outputs(input_state) + outputs(input_state with flipped i-th bit).
const char* bb_circuit_value(const char* set_name, const char* case_name, const char* input_state);

#ifdef __cplusplus
}
#endif